brain/sources/prod-metadata/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>