brain/sources/prod-metadata/objects/Lead/fields/Additional_Comments_or_Questions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments_or_Questions__c</fullName>
    <label>Additional Comments or Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>