brain/sources/prod-metadata/objects/Lead/fields/Applied_Job_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Applied_Job_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links website applicant lead to the specific Job Requirement they applied for. Populated automatically via website External Job ID matching.</description>
    <inlineHelpText>This field auto-populates when a candidate applies from the website. The system matches Website Job External ID to External Job ID on Job Requirement.</inlineHelpText>
    <label>Applied Job Requirement</label>
    <referenceTo>Job_Requirement__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>