brain/sources/prod-metadata/objects/Lead/fields/B2B_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Company_Type__c</fullName>
    <description>Identifies the type of B2B company relationship. Direct Client hires directly. Vendor and Implementation Partners are middle-layer companies.</description>
    <inlineHelpText>Identifies the type of B2B company relationship. Direct Client hires directly. Vendor and Implementation Partners are middle-layer companies.</inlineHelpText>
    <label>B2B Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Client</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Implementation Partner</fullName>
            </value>
            <value>
                <fullName>Consulting Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>