brain/sources/prod-metadata/objects/Lead/fields/Candidate_Rate_Expectation__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Rate_Expectation__c</fullName>
    <description>Candidate expected hourly or salary rate. Captured during initial lead creation or website application. Used for job matching and submission planning.</description>
    <inlineHelpText>Enter the candidate expected rate. For hourly contractors enter hourly rate (e.g. 65.00). For full-time roles enter annual salary (e.g. 120000.00).</inlineHelpText>
    <label>Candidate Rate Expectation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>