brain/sources/prod-metadata/objects/Lead/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <label>Company Email</label>
    <type>Email</type>
</CustomField>