brain/sources/prod-metadata/objects/Lead/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>