brain/sources/prod-metadata/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <formula>IF(ISBLANK(TEXT(B2B_Company_Type__c)), &quot;Not Specified&quot;, TEXT(B2B_Company_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Type</label>
    <type>Text</type>
</CustomField>