brain/sources/prod-metadata/objects/Lead/fields/Contact_Number_WhatsApp__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_WhatsApp__c</fullName>
    <label>Contact Number WhatsApp</label>
    <type>Phone</type>
</CustomField>