brain/sources/prod-metadata/objects/Lead/fields/Conversion_Status__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Status__c</fullName>
    <formula>IF(IsConverted, &quot;Converted&quot;, &quot;Not Converted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Status</label>
    <type>Text</type>
</CustomField>