brain/sources/prod-metadata/objects/Lead/fields/Current_Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Visa_Status__c</fullName>
    <label>Current Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visa_Status</valueSetName>
    </valueSet>
</CustomField>