brain/sources/prod-metadata/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>This field is used to store lead&apos;s department.</description>
    <inlineHelpText>Enter lead&apos;s department</inlineHelpText>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>