brain/sources/prod-metadata/objects/Lead/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>This field is used to store the lead&apos;s designation.</description>
    <inlineHelpText>Enter above contact person&apos;s designation associated with company.</inlineHelpText>
    <label>Designation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>