brain/sources/prod-metadata/objects/Lead/fields/Estimated_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Bill_Rate__c</fullName>
    <description>Initial estimated bill rate the B2B client is willing to pay. Captured during early client discussions. This is an estimate only.</description>
    <inlineHelpText>Enter the estimated hourly or salary rate the client mentioned during initial discussions. This is not the final agreed rate.</inlineHelpText>
    <label>Estimated Bill Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>