brain/sources/prod-metadata/objects/Lead/fields/Flow_Only_Field__c.field-meta.xml
<CustomField>
    <fullName>Flow_Only_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Only Field</label>
    <type>Checkbox</type>
</CustomField>