brain/sources/prod-metadata/objects/Lead/fields/Header_Display__c.field-meta.xml
<CustomField>
    <fullName>Header_Display__c</fullName>
    <formula>TRIM(FirstName &amp; &quot; &quot; &amp; LastName)
&amp; IF(ISBLANK(Company_Name__r.Name), &quot;&quot;,
     &quot; - &quot; &amp; Company_Name__r.Name) &amp; &quot;  &quot; &amp; &quot;(&quot; &amp;  RecordType.Name &amp; &quot;)&quot;</formula>
    <label>Lead - Company</label>
    <type>Text</type>
</CustomField>