brain/sources/prod-metadata/objects/Lead/fields/Latest_Pre_Enrolment_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Latest_Pre_Enrolment_Form_Link__c</fullName>
    <label>Latest Pre Enrolment Form Link</label>
    <type>Url</type>
</CustomField>