brain/sources/prod-metadata/objects/Lead/fields/Latest_Pre_Enrolment_Opened_On__c.field-meta.xml
<CustomField>
    <fullName>Latest_Pre_Enrolment_Opened_On__c</fullName>
    <label>Latest Pre Enrolment Opened On</label>
    <type>DateTime</type>
</CustomField>