brain/sources/prod-metadata/objects/Lead/fields/Latest_Pre_Enrolment_Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Latest_Pre_Enrolment_Sent_On__c</fullName>
    <label>Latest Pre Enrolment Sent On</label>
    <type>DateTime</type>
</CustomField>