brain/sources/prod-metadata/objects/Lead/fields/Latest_Pre_Enrolment_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_Pre_Enrolment_Status__c</fullName>
    <label>Latest Pre Enrolment  Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>