brain/sources/prod-metadata/objects/Lead/fields/Latest_Pre_Enrolment_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Latest_Pre_Enrolment_Submitted_On__c</fullName>
    <label>Latest Pre Enrolment Submitted On</label>
    <type>DateTime</type>
</CustomField>