brain/sources/prod-metadata/objects/Lead/fields/Lead_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Category__c</fullName>
    <description>Identifies whether this lead is a candidate prospect or a B2B client prospect.Used for reporting and filtering.</description>
    <inlineHelpText>Select &quot;Candidate&quot; for job seekers and placement prospects. Select &quot;B2B Client&quot; for companies sending job requirements</inlineHelpText>
    <label>Lead Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>B2B Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>