brain/sources/prod-metadata/objects/Lead/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <description>This field is to track the progress of B2B client company or B2B candidates.</description>
    <label>Lead Status (not use)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Convert To Candidate Lead</fullName>
                <isActive>false</isActive>
                <label>Convert To Candidate Lead</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>