brain/sources/prod-metadata/objects/Lead/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>