brain/sources/prod-metadata/objects/Lead/fields/Payment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Completed</label>
    <type>Checkbox</type>
</CustomField>