brain/sources/prod-metadata/objects/Lead/fields/Pre_Enrolment_Request__c.field-meta.xml
<CustomField>
    <fullName>Pre_Enrolment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Pre Enrolment Request</label>
    <referenceTo>Pre_Enrolment_Request__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>