brain/sources/prod-metadata/objects/Lead/fields/Preferred_Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Work_Mode__c</fullName>
    <description>Candidate preferred working arrangement. Used to match candidates with job requirements that specify work mode.</description>
    <inlineHelpText>Select the candidate preferred work arrangement. Remote = fully remote. Hybrid = mix of remote and office. Onsite = full time at client location.</inlineHelpText>
    <label>Preferred Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Onsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>