brain/sources/prod-metadata/objects/Lead/fields/Primary_Technology__c.field-meta.xml
<CustomField>
    <fullName>Primary_Technology__c</fullName>
    <description>Candidate primary technical skill or technology niche. Examples: Salesforce, Java, Python, AWS. Used for quick identification and matching.</description>
    <inlineHelpText>Enter the candidate main technical skill. Example: Salesforce, Java + Spring Boot, AWS DevOps, React + Node.js</inlineHelpText>
    <label>Primary Technology</label>
    <type>TextArea</type>
</CustomField>