brain/sources/prod-metadata/objects/Lead/fields/Processed_for_JS__c.field-meta.xml
<CustomField>
    <fullName>Processed_for_JS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a Job Submission has been created from this Lead</description>
    <inlineHelpText>Indicates that a Job Submission has been created from this Lead</inlineHelpText>
    <label>Processed for JS</label>
    <type>Checkbox</type>
</CustomField>