brain/sources/prod-metadata/objects/Lead/fields/Requirement_Summary__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Summary__c</fullName>
    <description>Brief summary of the job requirement if the B2B lead already has an active requirement when created. Used before converting to Account and creating Job Requirement.</description>
    <inlineHelpText>If client has shared a requirement during initial contact, summarize here. Include role, skills, location, rate range, and timeline if available.</inlineHelpText>
    <label>Requirement Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>