brain/sources/prod-metadata/objects/Lead/fields/Resume_Attached__c.field-meta.xml
<CustomField>
    <fullName>Resume_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume Attached</label>
    <type>Checkbox</type>
</CustomField>