brain/sources/prod-metadata/objects/Lead/fields/Resume_Link__c.field-meta.xml
<CustomField>
    <fullName>Resume_Link__c</fullName>
    <description>URL link to candidate resume if stored outside Salesforce. Used when file attachment is not available at lead creation time.</description>
    <inlineHelpText>Paste the direct URL to the candidate resume. Use when resume is stored in Google Drive or Dropbox. Make sure the link is accessible.</inlineHelpText>
    <label>Resume Link</label>
    <type>Url</type>
</CustomField>