brain/sources/prod-metadata/objects/Lead/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <description>The deadline by which the client needs candidate profiles submitted. Captured if available during initial lead contact.</description>
    <inlineHelpText>Enter the deadline the client mentioned for receiving candidate profiles. If not confirmed, leave blank and update on Job Requirement after conversion.</inlineHelpText>
    <label>Submission Deadline</label>
    <type>DateTime</type>
</CustomField>