brain/sources/prod-metadata/objects/Lead/fields/Target_Role__c.field-meta.xml
<CustomField>
    <fullName>Target_Role__c</fullName>
    <description>The specific role the B2B client is looking to hire for. Captured during initial client inquiry before formal Job Requirement is created.</description>
    <inlineHelpText>Enter the role the client needs to fill. Example: Salesforce Developer, Java Backend Engineer. This will be used as Job Title when creating Job Requirement.</inlineHelpText>
    <label>Target Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>