brain/sources/prod-metadata/objects/Lead/fields/Target_Role_n__c.field-meta.xml
<CustomField>
    <fullName>Target_Role_n__c</fullName>
    <formula>IF(ISBLANK(Target_Role__c), &quot;Not Specified&quot;, Target_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Role</label>
    <type>Text</type>
</CustomField>