brain/sources/prod-metadata/objects/Lead/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>TextArea</type>
</CustomField>