brain/sources/prod-metadata/objects/Lead/fields/Total_Job_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_Applications__c</fullName>
    <description>This field stores the total number of Job Applications linked to this B2B Client Lead. It is automatically updated by system Flow when a Job Application is created or deleted. Do not edit manually</description>
    <inlineHelpText>Shows total Job Applications on this Lead. Auto-maintained by Flow. Read Only field.</inlineHelpText>
    <label>Total Job Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>