brain/sources/prod-metadata/objects/Lead/fields/Total_Job_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_Requirements__c</fullName>
    <description>Auto-populated by Flow. Do not edit manually</description>
    <inlineHelpText>Maintained by system Flow only. Read Only.</inlineHelpText>
    <label>Total Job Requirements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>