brain/sources/prod-metadata/objects/Lead/fields/Training_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Training_Schedule__c</fullName>
    <label>Training Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Schedule</valueSetName>
    </valueSet>
</CustomField>