brain/sources/prod-metadata/objects/Lead/fields/Upfront_amount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_amount__c</fullName>
    <label>Upfront Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>