brain/sources/prod-metadata/objects/Lead/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visa_Status</valueSetName>
    </valueSet>
</CustomField>