brain/sources/prod-metadata/objects/Lead/fields/Website_Job_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Website_Job_External_ID__c</fullName>
    <description>The external job reference ID from the Techsara website. Populated automatically when a candidate applies through the website job listing.</description>
    <inlineHelpText>This field is auto-populated from the website application form. Do not edit manually unless correcting a data error.</inlineHelpText>
    <label>Website Job External ID</label>
    <type>TextArea</type>
</CustomField>