brain/sources/prod-metadata/objects/Lead/fields/Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization__c</fullName>
    <label>Work Authorization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Work_Authorization_Picklist</valueSetName>
    </valueSet>
</CustomField>