brain/sources/prod-metadata/objects/Lead/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <label>Years of Experience</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>