brain/sources/prod-metadata/objects/Lead/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>