brain/sources/prod-metadata/objects/Lead/validationRules/Attach_Resume_Before_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Attach_Resume_Before_Conversion</fullName>
    <active>true</active>
    <description>Resume needs to be attached before converting a lead.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status , &apos;Converted&apos;),
  NOT(Resume_Attached__c),
  RecordType.DeveloperName &lt;&gt; &quot;B2B_Client_Lead&quot;
)</errorConditionFormula>
    <errorDisplayField>Resume_Attached__c</errorDisplayField>
    <errorMessage>Please attach the resume before converting this Lead.</errorMessage>
</ValidationRule>