brain/sources/prod-metadata/objects/Lead/validationRules/Background_Required_In_Negotiation.validationRule-meta.xml
<ValidationRule>
    <fullName>Background_Required_In_Negotiation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;B2C_Prospective_Candidate&apos;,
OR(
ISPICKVAL(Status,&apos;Negotiation&apos;),
ISPICKVAL(Status,&apos;Payment&apos;),
ISPICKVAL(Status,&apos;Converted&apos;)
),
OR(
ISBLANK(TEXT(Plan__c)),
ISBLANK(Offer_letter_amount__c),
ISBLANK(Salary__c),
ISBLANK(Upfront_amount__c)
)
)</errorConditionFormula>
    <errorMessage>Fill Out the Background Information before moving the status to Negotiation.</errorMessage>
</ValidationRule>