brain/sources/prod-metadata/objects/Lead/validationRules/Contact_Details_Requried.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Details_Requried</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status,&apos;Contacted&apos;),
ISBLANK( Email ), ISBLANK( Phone ), ISBLANK( LinkedIn_URL__c ))</errorConditionFormula>
    <errorMessage>Provide either Email or Phone or LinkedIn URL before moving this Lead to Contacted.</errorMessage>
</ValidationRule>