brain/sources/prod-metadata/objects/Lead/validationRules/Lead_Conversion_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Conversion_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Converted&quot;),
ISCHANGED(Status),
NOT(Flow_Only_Field__c)
)</errorConditionFormula>
    <errorMessage>Avoid converting lead from here. Use the &apos;Convert Lead&apos; button.</errorMessage>
</ValidationRule>